--- a/video.yaml
+++ b/video.yaml
@@ -1,9 +1,89 @@
 videostatusmap:
     3cd187e4869226b0a13d317ee0296caa:
         id: 3cd187e4869226b0a13d317ee0296caa
-        title: ""
+        title: 50万只蚊子摊成肉饼，一口炫10万只蚊子，你敢吃吗？
         url: https://www.bilibili.com/video/BV1ZX4y1b7iJ
-        status: pending
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    6f827aed57fe7af3a83362ccca4399c9:
+        id: 6f827aed57fe7af3a83362ccca4399c9
+        title: 一个空调不够用？明明自带空调，为啥大货车司机还要私装空调？
+        url: https://www.bilibili.com/video/BV1Ss4y1T76c
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    559fe3c5b1c414cfbe4986bfc41e6883:
+        id: 559fe3c5b1c414cfbe4986bfc41e6883
+        title: “门罗效应”是什么？给炸药加个金属罩，直接影响了战争进程
+        url: https://www.bilibili.com/video/BV1no4y1L7Y7
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    8941aac4ca2d35265369ed88c727d464:
+        id: 8941aac4ca2d35265369ed88c727d464
+        title: 【硬核解析】殉舰为什么屡禁不止？
+        url: https://www.bilibili.com/video/BV1Jk4y1W7iM
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    19909fbedca5cda181eeafa164878a7e:
+        id: 19909fbedca5cda181eeafa164878a7e
+        title: 从超鬼到超神，这是我见过最励志的大哥
+        url: https://www.bilibili.com/video/BV1eg4y1j7gu
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    81957d997c07f8640433dd4b46513f94:
+        id: 81957d997c07f8640433dd4b46513f94
+        title: 长途飞行时，空姐们都睡在哪里？
+        url: https://www.bilibili.com/video/BV1q94y1S74c
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    cfc7bbdc8e516bbce7ce1b9647d6628b:
+        id: cfc7bbdc8e516bbce7ce1b9647d6628b
+        title: 世界最难转动的齿轮，要想看到最后一圈，至少要比宇宙活的还长！
+        url: https://www.bilibili.com/video/BV1Za4y1u7kJ
+        status: finished
+        percent: 100
+        size: 1
+        type: ""
+        alreadydownloadedsize: 0
+        collectionid: ""
+    db20447c9c1409dcfacfa8d1d68bd54a:
+        id: db20447c9c1409dcfacfa8d1d68bd54a
+        title: ""
+        url: https://www.bilibili.com/video/BV1Uh411F7sH
+        status: fetching
+        percent: 0
+        size: 0
+        type: bilibili
+        alreadydownloadedsize: 0
+        collectionid: ""
+    e77faaab351714f1bef6f8634ce716b5:
+        id: e77faaab351714f1bef6f8634ce716b5
+        title: ""
+        url: https://www.bilibili.com/video/BV1eX4y1t7fG
+        status: fetching
         percent: 0
         size: 0
         type: bilibili
