--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
     "axios": "^1.4.0",
+    "element-plus": "^2.3.6",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
