fix: fix frontend build error

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "moduleResolution":  "node",
+    "types": ["element-plus/global"]
+  },
   "files": [],
   "references": [
     {
