--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: neosmemo
+          username: correctroad
           password: ${{ secrets.DOCKER_NEOSMEMO_TOKEN }}
 
       - name: Login to GitHub Container Registry
