add setting page

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
     "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
