--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@headlessui/vue": "^1.7.14",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
     "pinia": "^2.0.36",
