--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,10 @@
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "naive-ui": "^2.34.4",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "vfonts": "^0.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.0"
   },
