--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
+    "test": "jest",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -13,8 +14,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
     "@element-plus/icons-vue": "^2.1.0",
     "@headlessui/vue": "^1.7.14",
+    "@vue/vue3-jest": "^29.2.4",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
@@ -26,8 +31,10 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/jest": "^29.5.3",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -36,13 +43,17 @@
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.6.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
