chore: update zh document

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "gonic",
         "headlessui",
+        "Jellyfin",
         "outtmpl",
         "unstart",
         "ytdl"
