--- a/web/package.json
+++ b/web/package.json
@@ -23,14 +23,18 @@
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vfonts": "^0.0.3",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
+    "@types/lodash-es": "4.17.7",
     "@jest/globals": "^29.6.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
