--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@element-plus/icons-vue": "^2.1.0",
     "@headlessui/vue": "^1.7.14",
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/vue3-jest": "^29.2.4",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
@@ -34,12 +35,12 @@
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
-    "@types/lodash-es": "4.17.7",
     "@jest/globals": "^29.6.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jest": "^29.5.3",
     "@types/jsdom": "^21.1.1",
+    "@types/lodash-es": "4.17.7",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
